[dependencies]
bip32 = {version = "0.5.1", default-features = false, features = ["alloc", "secp256k1-ffi"]}
blake2 = "0.10.6"
bytes = "1.5.0"
ethereum-types = "0.14.0"
itertools = "0.12.0"
open-fastrlp = {version = "0.1.4", features = ["std", "ethereum-types"]}
rand = {version = "^0.8", features = ["std", "std_rng"], optional = true}
reqwest = {version = "0.12", features = ["json"], optional = true}
rustc-hex = "2.1.0"
secp256k1 = {version = "0.27.0", features = ["recovery"]}
serde = {version = "^1.0", features = ["derive"], optional = true}
serde_json = {version = "^1.0", optional = true}
serde_with = {version = "^3.4", features = ["hex"], optional = true}
tiny-bip39 = "1.0.0"
tiny-keccak = {version = "2.0.0", features = ["keccak"]}

[dev-dependencies]
bloomfilter = "^1.0"
ethabi = "^18.0"
rand = {version = "0.8.5", features = ["getrandom"]}
tokio = {version = "=1.38.1", features = ["full"]}
# version_sync: to ensure versions in `Cargo.toml` and `README.md` are in sync
version-sync = "0.9.4"

[features]
builder = ["http", "dep:rand"]
http = ["dep:reqwest", "serde"]
# default = ['builder']
serde = ["dep:serde", "dep:serde_json", "dep:serde_with"]

[lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(tarpaulin_include)']}

[package]
authors = ["Stanislav Terliakov <terlya.stas@gmail.com>"]
categories = ["cryptography"]
description = "Rust library to aid coding with VeChain: wallets, transactions signing, encoding and verification, smart contract ABI interfacing, etc."
documentation = "https://docs.rs/thor-devkit"
edition = "2021"
keywords = ["vechain", "crypto", "blockchain", "cryptography"]
license = "GPL-3.0"
name = "thor-devkit"
readme = "README.md"
repository = "https://github.com/sterliakov/thor-devkit.rs"
rust-version = "1.79.0"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
