[dependencies]
bip32 = {version = "0.5", default-features = false, features = ["alloc", "secp256k1-ffi"]}
blake2 = "0.10"
bytes = "1.10"
ethereum-types = "0.15"
fastrlp = {version = "0.4.0", features = ["ethereum-types", "std"]}
itertools = "0.14"
rand = {version = "^0.9", features = ["std", "std_rng"], optional = true}
reqwest = {version = "0.12", features = ["json"], optional = true}
rustc-hex = "2.1"
secp256k1 = {version = "0.27", features = ["recovery"]}
serde = {version = "^1.0", features = ["derive"], optional = true}
serde_json = {version = "^1.0", optional = true}
serde_with = {version = "^3.4", features = ["hex"], optional = true}
tiny-bip39 = "2.0"
tiny-keccak = {version = "2.0", features = ["keccak"]}

[dev-dependencies]
alloy = {version = "0.13.0", default-features = false, features = ["json-abi", "dyn-abi"]}
bloomfilter = "^3.0"
rand = "0.9.0"
tokio = {version = "1.44", features = ["full"]}
# version_sync: to ensure versions in `Cargo.toml` and `README.md` are in sync
version-sync = "0.9.4"

[features]
builder = ["http", "dep:rand"]
# default = ['builder', 'serde']
http = ["dep:reqwest", "serde"]
serde = ["dep:serde", "dep:serde_json", "dep:serde_with"]

[lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(tarpaulin_include)']}

[package]
authors = ["Stanislav Terliakov <terlya.stas@gmail.com>"]
categories = ["cryptography"]
description = "Rust library to aid coding with VeChain: wallets, transactions signing, encoding and verification, smart contract ABI interfacing, etc."
documentation = "https://docs.rs/thor-devkit"
edition = "2021"
keywords = ["vechain", "crypto", "blockchain", "cryptography"]
license = "GPL-3.0"
name = "thor-devkit"
readme = "README.md"
repository = "https://github.com/sterliakov/thor-devkit.rs"
rust-version = "1.81.0"
version = "0.1.1"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
